# neojam

./: README.md
jamvm-1.0.0/: INSTALL  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  configure  configure.in
jamvm-1.0.0/src/: Makefile.am  Makefile.in  alloc.c  alloc.h  cast.c  class.c  dll.c  excep.c  execute.c  frame.h  hash.c  hash.h  interp.c  jam.c  jam.h  jni.c  jni.h  lock.c  lock.h  natives.c  reflect.c  resolve.c  sig.h  string.c  thread.c  thread.h  utf8.c
jamvm-1.0.0/src/i386/: Makefile.am  Makefile.in  dll_md.c  lock_md.h
jamvm-1.0.0/src/powerpc/: Makefile.am  Makefile.in  callNative.s  dll_md.c  lock_md.h
